# prometheus_csharp

./: CMakeLists.txt
cmake/: FindDirectx9.cmake  FindPkgMacros.cmake  googletest-download.cmake  googletest.cmake
editor/: CMakeLists.txt
editor/prometheus/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
editor/prometheus/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
editor/prometheus/Resources/: DefaultBrushes.xaml  DefaultColors.xaml
editor/prometheus/Themes/Default/: MainWindowStyle.xaml
editor/render/: CMakeLists.txt
editor/render/inc/: render.hpp  render_manager.hpp  render_triangle.hpp  stdafx.hpp
editor/render/src/: dllmain.cpp  render.cpp  render_manager.cpp  render_triangle.cpp
libraries/: CMakeLists.txt
libraries/math/: CMakeLists.txt
libraries/math/inc/: matrix.hpp  matrix4x4.hpp  matrix4x4_bool.hpp  matrix_bool.hpp  vector.hpp  vector4.hpp  vector4_bool.hpp  vector_bool.hpp
libraries/math/inl/: matrix.inl  matrix4x4.inl  matrix4x4_bool.inl  matrix_bool.inl  vector.inl  vector4.inl  vector4_bool.inl  vector_bool.inl
test/: CMakeLists.txt  matrix.cpp  vector.cpp
